<resources>
    <string name="app_name">Clear</string>

    <string name="clean">Clean</string>
    <string name="phone_booster">Phone Booster</string>
    <string name="battery">Battery</string>
    <string name="cpu_cooler">CPU Cooler</string>
    <string name="photo_clean">Photo Clean</string>
    <string name="result_text">The running speed has been increased</string>
    <string name="scanning_garbage_with">Scanning garbage…</string>
    <string name="picture_garbage">Picture Scanning</string>
</resources>